# CAST

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CAST TERACHEM OPTIONS.txt  CAST.txt  CMakeLists.txt  CONTRIBUTING.md  EXPLANATION_FOR_THIS_BRANCH.txt  INPUTFILE  Makefile  README.md  amber99_gaff_big_original.rar  cast_revision.h.in  configuration.cc  configuration.h  coords.cc  coords.h  coords_io.cc  coords_rep.h  dimer.cc  dimer.h  energy.cc  energy_int_aco.cc  energy_int_aco.h  energy_int_aco_pot.cc  energy_int_mopac.h  function_trait.h  gb_solv.cc  gb_solv.h  gbsa.cc  gbsa.h  global.h  histogram.h  interp_1d1.h  licensing.md  main.cc  matop.h  md.cc  md.h  (+33 more)
Forcefields/: add_new_amber_atom_types.py  amber99_gaff.prm  amber99_gaff_big.rar  amber_find_atomnumber_and_ambercharge.py  amber_find_atomnumber_and_charge.py  gaff_to_tinker.py  oplsaa_mod2.prm
examples/taskMD/: 01_without_anything.rar  02_heat_without_thermostat.rar  03_heat_with_thermostat.rar  04_veloscale.rar  05_spherical.rar  07_trackoffset.rar  09_snap_opt.rar  10_preoptimize.rar  11_refine.rar  12_rattle.rar  13_rattlebond.rar
gtest/: configurationTest.cpp  main.cc  scon_mathmatrix_test.cc  scon_mathmatrix_test.cpp  scon_traits_test.cc  test_fep_gradients.cc  testing_main.cc
manual/: .gitignore  castmanual.tdo  castmanual.tex  castmanual.tex.bak  castmanualReferences.bib  readme.md
manual/Tutorial/LaTeX/: .gitignore  NEB_text_bla.txt  Tutorial.aux  Tutorial.bcf  Tutorial.blg  Tutorial.run.xml  Tutorial.tex  Tutorial.toc
manual/Tutorial/scripts/: copy_files.py  fake_queue.py  umbrella2d_add.py  umbrella2d_analysis.py  umbrella2d_analysis_path.py  umbrella2d_check.py  umbrella2d_cut.py  umbrella2d_plot.py  walkOnPath.py  (+1 more)
my_things/: Masterarbeit.bib  Presentation1.pptx  cos(2x).plt  cos(3x)+cos(x).plt  cos(3x).plt  cos(x)-cos(2x).plt  lenard_jones.plt  masterarbeit-blx.bib  masterarbeit.tex
optional_files/: FEP_analysis.py  dftbaby_interface.py  homepage.md  premake5.lua
optional_files/DFTBaby-files/: DFTB2.py  DFTB2_cast.py  LR_TDDFTB_cast.py  RepulsivePotential_cast.py  calc_E.py  dftbaby_interface.py  utils.py  utils_cast.py
optional_files/Spackman_correction/: CC_EN.in  CC_GRAD.in  CH_EN.in  CH_GRAD.in  HH_EN.in  HH_GRAD.in  NC_GRAD.in  NH_EN.in  NH_GRAD.in  NN_EN.in  NN_GRAD.in  NO_EN.in  OC_EN.in  OC_GRAD.in  OH_EN.in  OH_GRAD.in  OO_EN.in  OO_GRAD.in  spackman.prm
optional_files/example_structurefiles/: ethan_FEP.arc  tridecaalanin.arc  ubq.arc  ubq_FEP_met2cys.arc  water.arc
optional_files/forcefields_utility/: Spackman.prm  add_new_amber_atom_types.py  amber99.prm  amber99_gaff_charge.prm  amber99_gaff_nocharge.prm  amber_find_atomnumber_and_ambercharge.py  amber_find_atomnumber_and_charge.py  atomtypes.txt  gaff_to_tinker.py  gausTOxyz_amber.py  oplsaa_mod.prm  oplsaa_mod2.prm
optional_files/project/: CAST.make  Makefile
optional_files/python_modules/: dftbaby_interface.py
optional_files/scripts/: FEP_check.py  FEP_histograms.py  PCA_compare_histograms.py  PCA_compare_histograms_2D.py  PCA_plot_1D.py  PCA_plot_2D.plt  PCA_plot_2D.py  PCA_sort_atoms.py  calc_RMSD_from_MD.py  calc_atom_dist.py  change_pdb.py  cut_peptide.py  gaus_to_xyz.py  get_structure.py  insert_and_modify_atom_types.py  insert_atom_types.py  pca_plot.plt  plotThermostat.py  plot_MD_angles.py  plot_MD_distances.py  plot_zones.py  remove_structures.py  test.csv  umbrella.py  umbrella_analysis.py  walkOnPath.py
optional_files/windows_precompiled_libs/: gmock.lib  gmocko.lib
project/: CAST.make  Makefile
src/: .clang-format  .energy_int_chemshell.cc.swp  2DScan.cc  2DScan.h  2DScan.h.gch  Array.h  BestFitRotation.h  Center.cc  Center.h  ConstrainedInternalCoordinates.cc  ConstrainedInternalCoordinates.h  Couplings.cc  Couplings.h  InternalCoordinateBase.h  InternalCoordinateDecorator.cc  InternalCoordinateDecorator.h  InternalCoordinateUtilities.h  InternalCoordinates.cc  InternalCoordinates.h  Matrix_Class.cc  Matrix_Class.h  Optimizer.cc  Optimizer.h  PCA.cc  PCA.cpp  PCA.h  Path_perp.cc  Path_perp.h  PrimitiveInternalCoordinates.cc  PrimitiveInternalCoordinates.h  PrimitiveInternalsTransRot.cc  PrimitiveInternalsTransRot.h  TrajectoryMatrixClass.cc  TrajectoryMatrixClass.h  TranslationRotationInternalCoordinates.cc  TranslationRotationInternalCoordinates.h  alignment.cc  alignment.h  aminoacids.cc  atomic.h  (+186 more)
src/CoordinatesAndMolecules/: Atom.h  Molecule.cc  Molecule.h
src/FileReader/: Reader.h  TinkerFileReader.cc  TinkerFileReader.h
src/InternalCoordinates/: BestFitRotation.h  BondGraph.h  ConstrainedInternalCoordinates.cc  ConstrainedInternalCoordinates.h  CoordinateSystem.h  GeometryOptimization.h  InternalCoordinateBase.h  InternalCoordinateDecorator.cc  InternalCoordinateDecorator.h  InternalCoordinateUtilities.h  InternalCoordinates.cc  InternalCoordinates.h  InternalCoordinatesAliases.h  InternalCoordinatesUtilies.cc  Optimizer.cc  Optimizer.h  PrimitiveInternalCoordinates.cc  PrimitiveInternalCoordinates.h  TranslationRotationInternalCoordinates.cc  TranslationRotationInternalCoordinates.h  quaternion.h
src/Scon/: function_trait.h  scon.h  scon_angle.h  scon_c3.h  scon_chrono.h  scon_cio.h  scon_internal.h  scon_iterator.h  scon_linkedcell.h  scon_log.h  scon_mathmatrix.h  scon_matrix.h  scon_serialization.h  scon_spherical.h  scon_traits.h  scon_tsqcmatrix.h  scon_utility.cc  scon_utility.h  scon_vect.h
src/Tests/: alignment_test.cc  ic_util_and_graph_test.cc  ic_util_and_graph_test.h  internal_coordinate_test.cc  internal_coordinate_test.h  mock_test.cc  primitive_internals_test.h  scon_mathmatrix_test.cc  scon_traits_test.cc  test_qmmm.cc  testing_main.cc
src/documentation/: Doxyfile
src/gtest/: configurationTest.cc  graph_test.h  ic_util_and_graph_test.cc  ic_util_and_graph_test.h  internal_coordinate_test.cc  internal_coordinate_test.h  optimization_test.cc  optimization_test.h  primitive_internals_test.cc  primitive_internals_test.h  scon_mathmatrix_test.cc  scon_traits_test.cc  test_fep_gradients.cc  test_helperfunctions.cc  test_qmmm.cc  testing_main.cc
(+322 files in other folders)
